HMAN-342 NHDU updates to support FTA changes in PR #94 (#125)
* temporarily suppress CVEs

* HMAN-381 expand FTAs to cover ACs from HMAN-319

   [HMAN-342](https://tools.hmcts.net/jira/browse/HMAN-342)
   [HMAN-381](https://tools.hmcts.net/jira/browse/HMAN-381)
   [HMAN-319](https://tools.hmcts.net/jira/browse/HMAN-319)

Expand functional tests to cover acceptance criteria in HMAN-319.

* HMAN-381 patch luhn/length check in HMAN-319

   [HMAN-342](https://tools.hmcts.net/jira/browse/HMAN-342)
   [HMAN-381](https://tools.hmcts.net/jira/browse/HMAN-381)
   [HMAN-319](https://tools.hmcts.net/jira/browse/HMAN-319)

Patch to the luhn/length case reference check in HMAN-319.

* HMAN-381 expand FTAs to cover ACs from HMAN-322

   [HMAN-342](https://tools.hmcts.net/jira/browse/HMAN-342)
   [HMAN-381](https://tools.hmcts.net/jira/browse/HMAN-381)
   [HMAN-322](https://tools.hmcts.net/jira/browse/HMAN-322)

Expand functional tests to cover acceptance criteria in HMAN-322.

* HMAN-382 expand FTAs to cover ACs from HMAN-320

   [HMAN-342](https://tools.hmcts.net/jira/browse/HMAN-342)
   [HMAN-382](https://tools.hmcts.net/jira/browse/HMAN-382)
   [HMAN-320](https://tools.hmcts.net/jira/browse/HMAN-320)

Expand functional tests to cover acceptance criteria in HMAN-320.

* HMAN-382 expand FTAs to cover ACs from HMAN-326

   [HMAN-342](https://tools.hmcts.net/jira/browse/HMAN-342)
   [HMAN-382](https://tools.hmcts.net/jira/browse/HMAN-382)
   [HMAN-326](https://tools.hmcts.net/jira/browse/HMAN-326)

Expand functional tests to cover acceptance criteria in HMAN-326.

* HMAN-382 adjust FTA to avoid clash

   [HMAN-342](https://tools.hmcts.net/jira/browse/HMAN-342)
   [HMAN-382](https://tools.hmcts.net/jira/browse/HMAN-381)
   [HMAN-382](https://tools.hmcts.net/jira/browse/HMAN-382)
   [HMAN-319](https://tools.hmcts.net/jira/browse/HMAN-319)

Adjust HMAN-319 AC02 FTA to avoid clash with ES FTAs.

* HMAN-381 add extra FTA for HMAN-319
